unpackaged/main/default/objects/Famille__c/Famille__c.object-meta.xml
<CustomObject>
    <label>Famille</label>
    <nameField>
        <displayFormat>FF-{0000}</displayFormat>
        <label>Num de Famille</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Familles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>