unpackaged/main/default/objects/Famille__c/fields/Acheteur_BackUp__c.field-meta.xml
<CustomField>
    <fullName>Acheteur_BackUp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Acheteur BackUp</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Familles</relationshipName>
    <type>Lookup</type>
</CustomField>