unpackaged/main/default/objects/Famille__c/fields/Famille__c.field-meta.xml
<CustomField>
    <fullName>Famille__c</fullName>
    <label>Famille</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ATELIER</fullName>
            </value>
            <value>
                <fullName>CAPEX - CHASSIS</fullName>
            </value>
            <value>
                <fullName>CAPEX - GROUPE FROID</fullName>
            </value>
            <value>
                <fullName>CAPEX - MEUBLES</fullName>
            </value>
            <value>
                <fullName>CARBURANTS</fullName>
            </value>
            <value>
                <fullName>DEPLACEMENT</fullName>
            </value>
            <value>
                <fullName>FRAIS GENERAUX</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>OPEX - PDR</fullName>
            </value>
            <value>
                <fullName>TRANSPORT</fullName>
            </value>
            <value>
                <fullName>VEHICULES</fullName>
            </value>
            <value>
                <fullName>CAPEX - HAYON</fullName>
            </value>
            <value>
                <fullName>OPEX - CONSOMMABLE/PRESTATIONS/ACCESSOIRES CHASSIS</fullName>
            </value>
            <value>
                <fullName>CAPEX - VPC</fullName>
            </value>
            <value>
                <fullName>OPEX - FOURNITURES ATELIER</fullName>
            </value>
            <value>
                <fullName>OPEX - ACHATS INDIRECTS (SERVICES GENERAUX)</fullName>
            </value>
            <value>
                <fullName>OPEX - TRANSPORT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>