unpackaged/main/default/objects/Famille__c/fields/Rubriques__c.field-meta.xml
<CustomField>
    <fullName>Rubriques__c</fullName>
    <label>Rubriques</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carburant</fullName>
            </value>
            <value>
                <fullName>Dépannages - Remorquages</fullName>
            </value>
            <value>
                <fullName>Frais Généraux</fullName>
            </value>
            <value>
                <fullName>Lubrifiants</fullName>
            </value>
            <value>
                <fullName>Pièces-fournitures</fullName>
            </value>
            <value>
                <fullName>Pneus</fullName>
            </value>
            <value>
                <fullName>Sous-traitance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>