unpackaged/main/default/objects/Famille__c/fields/Sous_Famille__c.field-meta.xml
<CustomField>
    <fullName>Sous_Famille__c</fullName>
    <label>Sous Famille</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Famille__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accesoires Meubles</fullName>
            </value>
            <value>
                <fullName>Accessoires</fullName>
            </value>
            <value>
                <fullName>Ad blue</fullName>
            </value>
            <value>
                <fullName>Agences de voyage</fullName>
            </value>
            <value>
                <fullName>Appareils de mesure</fullName>
            </value>
            <value>
                <fullName>Badge autoroute</fullName>
            </value>
            <value>
                <fullName>Batteries</fullName>
            </value>
            <value>
                <fullName>Caissons frigorifiques</fullName>
            </value>
            <value>
                <fullName>Carburant</fullName>
            </value>
            <value>
                <fullName>Carrosseries</fullName>
            </value>
            <value>
                <fullName>Carte carburant</fullName>
            </value>
            <value>
                <fullName>Certificats économie d&#39;énergie</fullName>
            </value>
            <value>
                <fullName>Chariots élévateurs</fullName>
            </value>
            <value>
                <fullName>Châssis</fullName>
            </value>
            <value>
                <fullName>Consommables atelier</fullName>
            </value>
            <value>
                <fullName>Consommables informatiques</fullName>
            </value>
            <value>
                <fullName>Containers</fullName>
            </value>
            <value>
                <fullName>Contrôle technique atelier</fullName>
            </value>
            <value>
                <fullName>Contrôle technique véhicules</fullName>
            </value>
            <value>
                <fullName>Courrier/messagerie</fullName>
            </value>
            <value>
                <fullName>Déchets</fullName>
            </value>
            <value>
                <fullName>Dépannage</fullName>
            </value>
            <value>
                <fullName>EPI</fullName>
            </value>
            <value>
                <fullName>Extincteurs</fullName>
            </value>
            <value>
                <fullName>Fluides frigorifiques</fullName>
            </value>
            <value>
                <fullName>Fontaine de dégraissage</fullName>
            </value>
            <value>
                <fullName>Fontaines à eau</fullName>
            </value>
            <value>
                <fullName>Fourniture bureau</fullName>
            </value>
            <value>
                <fullName>Gaz industriel</fullName>
            </value>
            <value>
                <fullName>Groupe Froid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>