unpackaged/main/default/objects/Famille__c/listViews/Toutes_les_familles.listView-meta.xml
<ListView>
    <fullName>Toutes_les_familles</fullName>
    <columns>NAME</columns>
    <columns>Acheteur__c</columns>
    <columns>Famille__c</columns>
    <columns>Sous_Famille__c</columns>
    <filterScope>Everything</filterScope>
    <label>Toutes les familles</label>
</ListView>